--- a/index.html
+++ b/index.html
@@ -4,25 +4,45 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="styles.css">
-    <!-- CSS only -->
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <title>Calculadora de IMC com JS</title>
+    <link rel="stylesheet" href="assets/styles.css">
+    <script src="assets/script.js" defer></script>
+   
 </head>
 <body>
-    <div class="container">
-        <div class="row align-items-center">
-            <div class="col">
-              One of three columns
+      <div class="container">
+        <div id="calc-container" >
+          <h2>Calculadora de IMC</h2>
+          <form id="imc-form">
+            <div class="form-inputs">
+              <div class="form-control">
+                <label for="height">Altura:</label>
+                <input type="text" name="height" id="height" placeholder="Exemplo 1,50">
+              </div>
+              <div class="form-control">
+                <label for="weight">Peso:</label>
+                <input type="text" name="weight" id="weight" placeholder="Exemplo 70,5">
+              </div>
             </div>
-            <div class="col">
-              One of three columns
+            <div class="action-control">
+              <button id="calc-btn">Calcular</button>
+              <button id="clear-btn">Limpar</button>
             </div>
-            <div class="col">
-              One of three columns
+          </form>
+        </div>
+        <div id="result-container" class="hide" >
+          <p id="imc-number">Seu IMC: <span></span></p>
+          <p id="imc-info">Situação atual: <span></span></p>
+          <h3>Confira as classificações:</h3>
+          <div id="imc-table">
+            <div class="table-header">
+              <h4>IMC</h4>
+              <h4>Classificação</h4>
+              <h4>Obesidade</h4>
             </div>
-          </div>
+            </div>
+          <button id="back-btn">Voltar</button>
+        </div>
       </div>
-  <h1>TESTE</h1>  
 </body>
 </html>
