--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
           <form id="imc-form">
             <div class="form-inputs">
               <div class="form-control">
-                <label for="height">Altura:</label>
+                <label for="height">Digite a sua Altura:</label>
                 <input type="text" name="height" id="height" placeholder="Exemplo 1,50">
               </div>
               <div class="form-control">
-                <label for="weight">Peso:</label>
+                <label for="weight">Digite o seu Peso:</label>
                 <input type="text" name="weight" id="weight" placeholder="Exemplo 70,5">
               </div>
             </div>
